--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.card {
+  @apply mb-5 block rounded-lg border border-gray-200 shadow-md;
+}
