--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+input, select, textarea {
+  @apply rounded border outline-none ring-indigo-300 focus:ring dark:text-white dark:bg-gray-800
+}
+
 .card {
   @apply mb-5 block rounded-lg border border-gray-200 shadow-md;
 }
