--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,7 @@ input, select, textarea {
 .deafult-button {
   @apply rounded bg-gray-100 py-2 px-4 text-black shadow outline-none hover:bg-gray-200 active:bg-gray-300 dark:text-white dark:bg-gray-800 dark:hover:bg-gray-700
 }
+
+.caret {
+  @apply w-0 h-0 border-8 border-solid border-transparent border-r-gray-300 dark:border-r-gray-900 absolute ml-[73px] -mt-5
+}
